Update JmxAgent to be compatible with JDK 10
Since access to sun.management.Agent is prohibited since JDK 9, JmxAgent
class needs another compatible code. As a limitation with JDK 9, users
must set `jdk.attach.allowAttachSelf=true` system property to enable
JMX.

Behavior doesn't change with JDK 8.